Fixed horizontal scrolling of games

--- a/src/stylesheets/game.less
+++ b/src/stylesheets/game.less
@@ -18,12 +18,14 @@
   .game-render {
     flex: 1;
     display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: center;
+    text-align: center;
     width: 100%;
     overflow-y: auto;
     
     > pre {
+      flex: 1;
       margin: auto;
     }
   }
@@ -194,6 +196,11 @@
     width: 100%;
     height: 100%;
     background-color: rgba(255, 255, 255, 0.63);
+  }
+
+  .game-main .game-render {
+    max-width: 99vw;
+    overflow: auto;
   }
 
   .game-main .suggestions-container {
